@@ -24,6 +24,8 @@
  */
 package com.janilla.blanktemplate.frontend;
 
+import java.io.IOException;
+import java.io.UncheckedIOException;
 import java.lang.reflect.Modifier;
 import java.net.InetSocketAddress;
 import java.nio.file.Files;
@@ -37,6 +39,9 @@ import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+import javax.net.ssl.SSLContext;
 
 import com.janilla.blanktemplate.BlankDomain;
 import com.janilla.frontend.IndexFactory;
@@ -56,18 +61,22 @@ import com.janilla.java.TypeResolver;
 import com.janilla.web.ApplicationHandlerFactory;
 import com.janilla.web.Invocable;
 import com.janilla.web.InvocationResolver;
+import com.janilla.web.NotFoundException;
 import com.janilla.web.RenderableFactory;
 import com.janilla.web.ResourceMap;
 
 public class BlankFrontend {
 
-	public static final String[] DI_PACKAGES = { "com.janilla.web", "com.janilla.blanktemplate",
-			"com.janilla.blanktemplate.frontend" };
+	public static Stream<Class<?>> diTypes() {
+		return Stream.of(Java.getPackageTypes("com.janilla.http"), Java.getPackageTypes("com.janilla.web"),
+				Java.getPackageTypes("com.janilla.frontend", _ -> true),
+				Java.getPackageTypes("com.janilla.blanktemplate"),
+				Java.getPackageTypes("com.janilla.blanktemplate.frontend")).flatMap(x -> x);
+	};
 
 	public static void main(String[] args) {
 		IO.println(ProcessHandle.current().pid());
-		var f = new DefaultDiFactory(
-				Arrays.stream(DI_PACKAGES).flatMap(x -> Java.getPackageTypes(x)).toList());
+		var f = new DefaultDiFactory(diTypes().toList());
 		serve(f, BlankFrontend.class, args.length > 0 ? args[0] : null);
 	}
 
@@ -75,44 +84,47 @@ public class BlankFrontend {
 			String configurationPath) {
 		T a;
 		{
-			a = diFactory.newInstance(applicationType,
-					Java.hashMap("diFactory", diFactory, "configurationFile",
-							configurationPath != null ? Path.of(configurationPath.startsWith("~")
-									? System.getProperty("user.home") + configurationPath.substring(1)
-									: configurationPath) : null));
+			var cf = configurationPath != null ? Path.of(
+					configurationPath.startsWith("~") ? System.getProperty("user.home") + configurationPath.substring(1)
+							: configurationPath)
+					: null;
+			a = diFactory.newInstance(applicationType, Java.hashMap("diFactory", diFactory, "configurationFile", cf));
 		}
 
-//		var c = sslContext(a.configuration(), a.configurationKey);
+		var c = sslContext(a.configuration(), a.configurationKey);
 
 		HttpServer s;
 		{
 			var p = Integer.parseInt(a.configuration.getProperty(a.configurationKey + ".server.port"));
 			s = a.diFactory.newInstance(a.diFactory.classFor(HttpServer.class),
-					Map.of("endpoint", new InetSocketAddress(p), "handler", a.handler));
+					Java.hashMap("endpoint", new InetSocketAddress(p), "sslContext", c, "handler", a.handler));
 		}
 		s.serve();
 	}
 
-//	protected static <T extends BlankFrontend> SSLContext sslContext(Configuration configuration,
-//			String configurationKey) {
-//		var p = configuration.getProperty(configurationKey + ".server.keystore.path");
-//		if (p == null)
-//			return DefaultHttpClient.sslContext("TLSv1.3");
-//		var w = configuration.getProperty(configurationKey + ".server.keystore.password");
-//		if (p.startsWith("~"))
-//			p = System.getProperty("user.home") + p.substring(1);
-//		var f = Path.of(p);
-//		if (!Files.exists(f)) {
-//			var cn = configuration.getProperty(configurationKey + ".server.keystore.common-name");
-//			var san = configuration.getProperty(configurationKey + ".server.keystore.subject-alternative-name");
-//			Java.generateKeyPair(cn != null ? cn : "localhost", f, w, san != null ? san : "dns:localhost,ip:127.0.0.1");
-//		}
-//		try (var s = Files.newInputStream(f)) {
-//			return Java.sslContext(s, w.toCharArray());
-//		} catch (IOException e) {
-//			throw new UncheckedIOException(e);
-//		}
-//	}
+	protected static <T extends BlankFrontend> SSLContext sslContext(Configuration configuration,
+			String configurationKey) {
+		var p = configuration.getProperty(configurationKey + ".server.keystore.path");
+		if (p != null) {
+			var w = configuration.getProperty(configurationKey + ".server.keystore.password");
+			if (p.startsWith("~"))
+				p = System.getProperty("user.home") + p.substring(1);
+			var f = Path.of(p);
+			if (!Files.exists(f)) {
+				var cn = configuration.getProperty(configurationKey + ".server.keystore.common-name");
+				var san = configuration.getProperty(configurationKey + ".server.keystore.subject-alternative-name");
+				Java.generateKeyPair(cn != null ? cn : "localhost", f, w,
+						san != null ? san : "dns:localhost,ip:127.0.0.1");
+			}
+			try (var s = Files.newInputStream(f)) {
+				return Java.sslContext(s, w.toCharArray());
+			} catch (IOException e) {
+				throw new UncheckedIOException(e);
+			}
+		}
+//		return DefaultHttpClient.sslContext("TLSv1.3");
+		return null;
+	}
 
 	protected final HttpHandlerFactory handlerFactory;
 
@@ -170,8 +182,8 @@ public class BlankFrontend {
 		typeResolver = diFactory.newInstance(diFactory.classFor(DollarTypeResolver.class));
 		converter = diFactory.newInstance(diFactory.classFor(Converter.class));
 
-		httpClient = diFactory.newInstance(diFactory.classFor(HttpClient.class));
-//				Map.of("sslContext", sslContext(configuration, configurationKey)));
+		httpClient = diFactory.newInstance(diFactory.classFor(HttpClient.class),
+				Collections.singletonMap("sslContext", sslContext(configuration, configurationKey)));
 		{
 			var c = diFactory.classFor(CmsDataFetching.class);
 			dataFetching = c != null ? diFactory.newInstance(c) : null;
@@ -181,19 +193,18 @@ public class BlankFrontend {
 		resourceMap = diFactory.newInstance(diFactory.classFor(ResourceMap.class), Map.of("paths", resourcePaths()));
 		indexFactory = diFactory.newInstance(diFactory.classFor(IndexFactory.class));
 
-		invocationResolver = diFactory.newInstance(diFactory.classFor(InvocationResolver.class),
-				Map.of("invocables",
-						diFactory.types().stream()
-								.flatMap(x -> Arrays.stream(x.getMethods())
-										.filter(y -> !Modifier.isStatic(y.getModifiers()) && !y.isBridge())
-										.map(y -> new Invocable(x, y)))
-								.toList(),
-						"instanceResolver", (Function<Class<?>, Object>) x -> {
-							var y = diFactory.context();
+		invocationResolver = diFactory.newInstance(diFactory.classFor(InvocationResolver.class), Map.of("invocables",
+				diFactory.types().stream().filter(x -> !(x.isInterface() || Modifier.isAbstract(x.getModifiers())))
+						.flatMap(x -> Arrays.stream(x.getMethods())
+								.filter(y -> !Modifier.isStatic(y.getModifiers()) && !y.isBridge())
+								.map(y -> new Invocable(x, y)))
+						.toList(),
+				"instanceResolver", (Function<Class<?>, Object>) x -> {
+					var y = diFactory.context();
 //							IO.println("x=" + x + ", y=" + y);
-							return x.isAssignableFrom(y.getClass()) ? diFactory.context()
-									: diFactory.newInstance(diFactory.classFor(x));
-						}));
+					return x.isAssignableFrom(y.getClass()) ? diFactory.context()
+							: diFactory.newInstance(diFactory.classFor(x));
+				}));
 		renderableFactory = diFactory.newInstance(diFactory.classFor(RenderableFactory.class));
 		handlerFactory = diFactory.newInstance(diFactory.classFor(ApplicationHandlerFactory.class));
 		handler = this::handle;
@@ -260,27 +271,21 @@ public class BlankFrontend {
 	}
 
 	protected boolean handle(HttpExchange exchange) {
-//		return ScopedValue
-//				.where(Configuration.PROPERTY_GETTER, x -> configuration.getProperty(configurationKey + "." + x))
-//				.call(() -> {
-//					var h = handlerFactory
-//							.createHandler(exchange.exception() != null ? exchange.exception() : exchange.request());
-//					if (h == null)
-//						throw new NotFoundException(
-//								exchange.request().getMethod() + " " + exchange.request().getTarget());
-//					return h.handle(exchange);
-//				});
-		throw new RuntimeException();
+		return ScopedValue.where(com.janilla.blanktemplate.Configuration.PROPERTY_GETTER,
+				x -> configuration.getProperty(configurationKey + "." + x)).call(() -> {
+					var h = handlerFactory
+							.createHandler(exchange.exception() != null ? exchange.exception() : exchange.request());
+					if (h == null)
+						throw new NotFoundException(
+								exchange.request().getHeaderValue(":method") + " " + exchange.request().getHeaderValue(":path"));
+					return h.handle(exchange);
+				});
 	}
 
 	protected Map<String, List<Path>> resourcePaths() {
-//		var pp1 = Java.getPackagePaths("com.janilla.frontend", false).filter(Files::isRegularFile).toList();
-//		var pp2 = Stream.of("com.janilla.frontend.cms", BlankFrontend.class.getPackageName())
-//				.flatMap(x -> Java.getPackagePaths(x, false).filter(Files::isRegularFile)).toList();
-//		return Map.of("/base", pp1, "", pp2);
 		return resourcePrefixes().entrySet().stream().reduce(new HashMap<>(), (x, y) -> {
 			x.computeIfAbsent(y.getValue(), _ -> new ArrayList<>())
-					.addAll(Java.getPackagePaths(y.getKey(), false).filter(Files::isRegularFile).toList());
+					.addAll(Java.getPackagePaths(y.getKey()).filter(Files::isRegularFile).toList());
 			return x;
 		}, (_, x) -> x);
 	}
